src/styles.css
/* You can add global styles to this file, and also import other style files */

/* ====== HEADER ====== */
app-root {
  width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: Baskerville;
  background: #8B4513;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 auto;
  background: url("https://wallpaperaccess.com/full/1543392.png");
  border-bottom: 3px solid #2B9094;
  width: 100%;
}

.header-container {
  width: 90%;
  height: 100%;
  background: rgb(0, 0, 0, 0.7);
  color: whitesmoke;
}

.site-title {
  font-family: 'Playball', cursive;
  font-size: 15vh;
}

.welcome {
  margin: 30px auto;
}

.login {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin: 30px auto;
}

/* ====== MAIN PAGE ====== */

button {
  background-color: #4CAF50; /* Green */
  border: none;
  border-radius: 5%;
  color: white;
  padding: 10px 15px;
  margin: 10px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  border: 1px solid gray;
}

.back-btn {
  background: #C0C0C0;
  color: #000000;
}

a {
  text-decoration: none;
  color: #2B9094;
}

#contents-table {
  margin: 5vh auto 3vh auto;
  color: whitesmoke;
}

.publish-btn {
  background-color: #87CEFA;
  color: #2F4F4F;
  margin-bottom: 3vh;
}

#stories-div {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}

.story-div {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  width: 450px;
  height: 300px;
  border: 1px solid #123E40;
  margin: 10px;
  background: whitesmoke;
}

.story-title {
  color: #123E40;
}

.main-page-hdr {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.synopsis {
  text-align: center;
  margin: 5px;
}

/* ====== STORY FORM ====== */

.form {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 30px;
}

.form-small-entry {
  width: 90vw;
  margin: 10px auto;
}

label {
  display: inline-block;
  float: left;
  clear: left;
  width: 100px;
  text-align: center;
  color: whitesmoke;
}

input {
  display: inline-block;
  float: left;
  width: 350px;
}

.synopsis-input {
  width: 350px;
}

.story-input {
  width: 90vw;
  height: 30vh;
}

/* ====== SINGLE STORY ====== */

.single-story {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: whitesmoke;
  margin: 10px;
}

.single-story-title {
  font-size: 10vh;
}

.single-story-synopsis {
  width: 450px;
  text-align: center;
  margin-bottom: 30px;
}

.story {
  border: 1px solid gray;
  padding: 5px;
  margin: auto 5vw;
  background-color: #FCF5E5;
  color: #123E40;
}

.delete-btn {
  background: crimson;
}

@media (min-width: 750px) {
  .header-container {
    width: 40%;
    height: 100%;
    background: rgb(0, 0, 0, 0.7);
    color: whitesmoke;
  }

  .form {
    background: #FCF5E5;
    width: 850px;
  }

  .story-input {
    width: 800px;
    height: 2000px;
  }

  .form-small-entry {
    width: 800px;
  }

  input {
    display: inline-block;
    float: left;
    width: 700px;
  }

  label {
    display: inline-block;
    float: left;
    clear: left;
    width: 100px;
    text-align: center;
    color: #123E40;
  }

  .synopsis-input {
    width: 700px;
  }
}

